; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_htmlevent.c_bind_target_event.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_htmlevent.c_bind_target_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [15 x i8] c"(%p %p %s %p)\0A\00", align 1
@EVENTID_LAST = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [22 x i8] c"Unsupported event %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bind_target_event(i32* %0, i32* %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = load i32*, i32** %7, align 8
  %13 = call i32 @debugstr_w(i32* %12)
  %14 = load i32*, i32** %8, align 8
  %15 = call i32 @TRACE(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32* %10, i32* %11, i32 %13, i32* %14)
  %16 = load i32*, i32** %7, align 8
  %17 = call i64 @attr_to_eid(i32* %16)
  store i64 %17, i64* %9, align 8
  %18 = load i64, i64* %9, align 8
  %19 = load i64, i64* @EVENTID_LAST, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %25

21:                                               ; preds = %4
  %22 = load i32*, i32** %7, align 8
  %23 = call i32 @debugstr_w(i32* %22)
  %24 = call i32 @WARN(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0), i32 %23)
  br label %30

25:                                               ; preds = %4
  %26 = load i32*, i32** %6, align 8
  %27 = load i64, i64* %9, align 8
  %28 = load i32*, i32** %8, align 8
  %29 = call i32 @set_event_handler_disp(i32* %26, i64 %27, i32* %28)
  br label %30

30:                                               ; preds = %25, %21
  ret void
}

declare dso_local i32 @TRACE(i8*, i32*, i32*, i32, i32*) #1

declare dso_local i32 @debugstr_w(i32*) #1

declare dso_local i64 @attr_to_eid(i32*) #1

declare dso_local i32 @WARN(i8*, i32) #1

declare dso_local i32 @set_event_handler_disp(i32*, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
